<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:id="@+id/txtNomeF"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/edittext_cf_01"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblTituloProd" />

    <EditText
        android:id="@+id/txtCPF"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/edittext_cf_02"
        android:inputType="number"
        android:maxLength="11"
        app:layout_constraintEnd_toEndOf="@+id/txtNomeF"
        app:layout_constraintStart_toStartOf="@+id/txtNomeF"
        app:layout_constraintTop_toBottomOf="@+id/txtNomeF" />

    <EditText
        android:id="@+id/txtEmailF"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/edittext_cf_06"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/txtCPF"
        app:layout_constraintStart_toStartOf="@+id/txtCPF"
        app:layout_constraintTop_toBottomOf="@+id/txtCPF" />

    <EditText
        android:id="@+id/txtTurno"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/edittext_cf_07"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/txtEmailF"
        app:layout_constraintTop_toBottomOf="@+id/txtEmailF" />

    <EditText
        android:id="@+id/txtSalario"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/edittext_cf_08"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="@+id/txtEmailF"
        app:layout_constraintTop_toBottomOf="@+id/txtEmailF" />

    <EditText
        android:id="@+id/txtCargo"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/edittext_cf_09"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/txtSalario"
        app:layout_constraintStart_toStartOf="@+id/txtTurno"
        app:layout_constraintTop_toBottomOf="@+id/txtTurno" />

    <Button
        android:id="@+id/btnCadastrarF"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="#FFE100"
        android:text="@string/btn_cadastrar"
        app:layout_constraintEnd_toEndOf="@+id/txtCargo"
        app:layout_constraintStart_toStartOf="@+id/txtCargo"
        app:layout_constraintTop_toBottomOf="@+id/txtCargo" />

    <TextView
        android:id="@+id/lblTituloProd"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="#202020"
        android:backgroundTint="#202020"
        android:fontFamily="casual"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="casual"
        android:text="@string/text_view_cf"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/lblTituloProd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/lblTituloProd" />

    <Button
        android:id="@+id/btnVerFunc"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="#FFE100"
        android:text="Ver Funcionários"
        android:textAllCaps="true"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
